# xxhash-cli

./: Cargo.toml  README.md
.github/workflows/: cross-mac-release.yml  cross-release.yml  release.yml  rust.yml
src/: main.rs
